--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      overflow: hidden;
+/*      overflow: hidden;*/
       position: relative;
     }
 
@@ -328,7 +328,7 @@
   <div class="container">
     <header class="header">
       <h1>Krish Shah</h1>
-      <p>Select Profile</p>
+      <p>Select Style</p>
     </header>
 
     <div class="profiles">
@@ -391,9 +391,9 @@
     </div>
   </div>
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <p>Click to explore</p>
-  </footer>
+  </footer> -->
 
   <script>
     function navigateTo(url) {
