--- a/trading-cards.html
+++ b/trading-cards.html
@@ -748,6 +748,12 @@
       ul li{
         line-height: 1.4 ;
       }
+      .rookie-card .card-back .links{
+        gap: 0.25rem;
+      }
+      .rookie-card .card-back {
+        padding: 0.5rem;
+      }
     }
   </style>
 </head>
